--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -13,23 +13,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - CONFIG: linux_64_python3.6.____cpython
-            SHORT_CONFIG: linux_64_python3.6.____cpython
-            UPLOAD_PACKAGES: False
-            DOCKER_IMAGE: quay.io/condaforge/linux-anvil-comp7
-            os: ubuntu
-          - CONFIG: linux_64_python3.7.____cpython
-            SHORT_CONFIG: linux_64_python3.7.____cpython
-            UPLOAD_PACKAGES: False
-            DOCKER_IMAGE: quay.io/condaforge/linux-anvil-comp7
-            os: ubuntu
-          - CONFIG: linux_64_python3.8.____cpython
-            SHORT_CONFIG: linux_64_python3.8.____cpython
-            UPLOAD_PACKAGES: False
-            DOCKER_IMAGE: quay.io/condaforge/linux-anvil-comp7
-            os: ubuntu
-          - CONFIG: linux_64_python3.9.____cpython
-            SHORT_CONFIG: linux_64_python3.9.____cpython
+          - CONFIG: linux_64_
+            SHORT_CONFIG: linux_64_
             UPLOAD_PACKAGES: False
             DOCKER_IMAGE: quay.io/condaforge/linux-anvil-comp7
             os: ubuntu
